# caro

./: .clang-format  .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  build.sh
.github/workflows/: format.yml  lint.yml
src/: main.cpp
